MFC r306665: zfs: fix a wrong assertion for extended attributes

PR:		213112